--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,20 +23,13 @@ jobs:
     strategy:
       matrix:
         os:
-          - "almalinux-8"
-          - "amazonlinux-2023"
-          - "centos-7"
-          - "centos-stream-8"
           - "debian-10"
           - "debian-11"
-          - "fedora-latest"
-          - "rockylinux-8"
-          - "ubuntu-1804"
+          - "debian-12"
           - "ubuntu-2004"
+          - "ubuntu-2204"
         suite:
           - "server"
-          - "server-verification"
-          - "server-verify-no-databag"
       fail-fast: false
 
     steps:
