--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,10 @@ jobs:
     strategy:
       matrix:
         os:
+          - "debian-10"
           - "debian-11"
           - "debian-12"
+          - "ubuntu-2004"
           - "ubuntu-2204"
           - "ubuntu-2304"
         suite:
@@ -30,7 +32,7 @@ jobs:
         uses: actionshub/test-kitchen@2.1.0
         env:
           CHEF_LICENSE: accept-no-persist
-          KITCHEN_LOCAL_YAML: kitchen.dokken.yml
+          KITCHEN_LOCAL_YAML: kitchen.yml
         with:
           suite: ${{ matrix.suite }}
           os: ${{ matrix.os }}
